--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Oski Rescue</title>
     <meta content="Oski Rescue" property="og:title" />
     <meta name="description" content="Emergency info, at your fingertips."/>
-    <meta name="theme-color" content="#FFE44F"/>
+    <meta name="theme-color" content="#559CEF"/>
     <link rel="icon" href="assets/img/blorb.png">
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
@@ -20,6 +20,7 @@
   <body>
     <div id="map"></div>
 
+    <a class="callButton" href="tel:911"><div id="emergencyCall"><p>Call 911</p></div></a>
     <!-- prettier-ignore -->
     <script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
         ({key: "AIzaSyCZpFThh0UThCVKne9oMSkLOUT1oTp1eZc", v: "weekly"});</script>
